syntax = "proto3";

package pb;

import "rpc_signup_user.proto";
import "user.proto";

option go_package = "github.com/mas-wig/post-api-1/pb";

message VerifyEmailRequest { string verificationCode = 1; }

service AuthService {
  rpc SignUpUser(SignUpUserInput) returns (GenericResponse) {}
  rpc VerifyEmail(VerifyEmailRequest) returns (GenericResponse) {}
}



